syntax="proto3";

package calculator;

option go_package="calculatorpb";



message ResultRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message ResultResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest{
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputerAverageRequest {
    int32 number = 1;
}

message ComputerAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number= 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service ResultService {
    rpc Result(ResultRequest) returns (ResultResponse) {};

    //server streaming, more than 1 response from server at a time
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};

    //client streaming, more than 1 request from client at a time
    rpc ComputerAverage(stream ComputerAverageRequest) returns (ComputerAverageResponse) {};

    //bi-directional streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    //grpc error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};

}
